After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696290 - power: Handle the shell coming back with a different screensaver state
power: Handle the shell coming back with a different screensaver state
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
3.8.1
Depends on:
Blocks:
 
 
Reported: 2013-03-21 13:55 UTC by Bastien Nocera
Modified: 2013-03-25 07:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Handle the shell coming back with a different screensaver state (3.73 KB, patch)
2013-03-21 13:55 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-03-21 13:55:54 UTC
.
Comment 1 Bastien Nocera 2013-03-21 13:55:56 UTC
Created attachment 239470 [details] [review]
power: Handle the shell coming back with a different screensaver state

When the shell crashes while using the screensaver (or it needs to be
killed because it won't remove a black screen), we checked for the
state of the screensaver, but didn't do anything with it.

Now we use the same codepath and make sure we disable the screensaver's
aggressive timeout if gnome-shell isn't in screensaver mode anymore.
Comment 2 Ray Strode [halfline] 2013-03-21 14:11:07 UTC
Review of attachment 239470 [details] [review]:

::: plugins/power/gsd-power-manager.c
@@ +2922,3 @@
         }
 
+        handle_screensaver_active (manager, res);

seems right to me. Though we're a little lucky the gvariants are compatible.
Comment 3 Bastien Nocera 2013-03-21 17:57:54 UTC
Comment on attachment 239470 [details] [review]
power: Handle the shell coming back with a different screensaver state

Pushed to master, leaving opened for gnome-3-8

Attachment 239470 [details] pushed as 3437843 - power: Handle the shell coming back with a different screensaver state
Comment 4 Bastien Nocera 2013-03-25 07:28:37 UTC
Pushed to gnome-3-8